       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.13:
--------
        - nothing so far, equals 0.12 pl 4 :-)

In 0.12:
--------
patchlevel 4:
        - introduced some support for multi-screen displays
        - fixed some drag problems 
        - fixed more drag problems with opaque movement
        - hopefully fixed occasional freezes on certain X-Servers.

patchlevel 3:
        - honours KWM_WIN_ICON_GEOMETRY for iconify/deiconify animation
        - shaped window decorations faster and less flickering
        - border pixmaps fixed names got all a 'wm_' prefix. Name conflicts
		were reported. Sorry for all inconvenient.


patchlevel 2:
        - improved shaped window handling
	- CT: "pinned down" the pixmaps names for titlebar texture 
		and shaped borders. Now the only parameters necessary 
		in kwmrc to make these two features work are

		TitlebarLook=pixmap 
		ShapeMode=on

		The names of the pixmaps are no longer defined in the 
		kwmrc. They are fixed to: top.xpm, bottom.xpm, left.xpm, 
		right.xpm, topleft.xpm, topright.xpm, bottomleft.xpm, 
		bottomright.xpm, activetitlebar.xpm, inactivetitlebar.xpm. 
		All these pixmap s should to be found either in 
		$KDEDIR$/share/apps/kwm/pics/ or in 
		$USER_KDEDIR$ /share/apps/kwm/pics.

		This modification introduces consistancy with the technique 
		used to define titlebar buttons pixmaps and allows simplified
		theme constructions.

patchlevel 1:
        - first attempts of configurable mousebindings
patchlevel 0:
        - first attempts of configurable keybindings

In 0.11:
--------
patchlevel 14: 
        - internal cleanups with unmapNotify handling.